--- a/Backend/ecommerce_fashion_shop/ecommerce_fashion_shop/pom.xml
+++ b/Backend/ecommerce_fashion_shop/ecommerce_fashion_shop/pom.xml
@@ -98,6 +98,18 @@
             <artifactId>spring-data-elasticsearch</artifactId>
             <version>3.2.5.RELEASE</version>
         </dependency>
+
+        <!-- Swagger OpenAPI Dependencies -->
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.2.12</version> <!-- Use the latest version if possible -->
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version> <!-- Use the latest version if possible -->
+        </dependency>
     </dependencies>
 
     <build>
